--- a/ast/style.css
+++ b/ast/style.css
@@ -64,6 +64,16 @@ div.float1{
 	transition: background 0.2s;
 }
 
+#bgvideo video {
+  width:100%;
+  height:100%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  z-index: -1;
+}
+
 #gamecontainer {
 	box-sizing: border-box;
 	float: left;
