--- a/ast/style.css
+++ b/ast/style.css
@@ -20,6 +20,23 @@ div{
 	0% { opacity:0; }
 	100% { opacity:1; }
 }
+@keyframes fadeinpartial{
+	0% { opacity:0; }
+	100% { opacity:0.9; }
+}
+
+div.noisebg{
+	opacity: 0;
+	padding: 0px;
+	margin: 0px;
+	background-image: radial-gradient(#111d 0%, #000f 100%);
+	position: fixed;
+	width:100%;
+	height:100%;
+	z-index: -1;
+	animation-name: fadeinpartial;
+	animation-duration: 6s;
+}
 
 /*Slide from the left textboxes with no background from the music page*/
 /*each with it's own delay*/
@@ -40,6 +57,9 @@ div{
 	background: #000a;
 }
 
+#welcome{
+	font-size: 20pt;
+}
 
 .tvscreen{
 	display: flex;
@@ -53,7 +73,7 @@ div{
 .tvscreen iframe{
 	position:absolute;
 	left:50%;
-	top: 15%;
+	top:20%;
 	transform:translateX(-50%);
 }
 
@@ -81,7 +101,7 @@ div{
 	margin-left: 0px;
 	margin-right: 15px;
 
-	background: #00000055;
+	background: #0009;
 
 	border-radius: 16px;
 
