--- a/ast/style.css
+++ b/ast/style.css
@@ -25,6 +25,26 @@ div{
 	100% { opacity:0.9; }
 }
 
+@keyframes slidein{
+	0% { opacity:0; left:-32px; }
+	100% { opacity:1; left:0px; }
+}
+
+@keyframes floatin{
+	0% { opacity:0; bottom:-32px; }
+	100% { opacity:1; bottom:0px; }
+}
+
+@keyframes tvselectorfloat{
+	0% { opacity:0; bottom:5%; }
+	100% { opacity:1; bottom:15%; }
+}
+
+@keyframes tvscreenfloat{
+	0% { opacity:0; top:30%; }
+	100% { opacity:1; top:20%; }
+}
+
 div.noisebg{
 	opacity: 0;
 	padding: 0px;
@@ -41,10 +61,7 @@ div.noisebg{
 /*Slide from the left textboxes with no background from the music page*/
 /*each with it's own delay*/
 
-@keyframes slidein{
-	0% { opacity:0; left:-32px; }
-	100% { opacity:1; left:0px; }
-}
+
 
 .slide1{
 	position: relative;
@@ -59,6 +76,8 @@ div.noisebg{
 
 #welcome{
 	font-size: 20pt;
+	animation-name: fadein;
+	animation-duration: 3s;
 }
 
 .tvscreen{
@@ -75,6 +94,8 @@ div.noisebg{
 	left:50%;
 	top:20%;
 	transform:translateX(-50%);
+	animation-name: tvscreenfloat;
+	animation-duration: 1.5s;
 }
 
 .tvselector{
@@ -91,6 +112,9 @@ div.noisebg{
 	width: 100%;
 	height: 20%;
 	bottom: 15%;
+
+	animation-name: tvselectorfloat;
+	animation-duration: 1.5s;
 }
 .floattv{
 
@@ -107,9 +131,6 @@ div.noisebg{
 
 	width: 200px;
 	height: 50px;
-	animation-name: floatin;
-	animation-duration:0.4s;
-	transition: background 0.2s;
 }
 .floattv:hover{
 	background: #ffff;
@@ -133,10 +154,7 @@ a.white:active {color: fff; background-color: transparent; text-decoration: unde
 /*slide up (float) content boxes with a background that covers the page width from the games page*/
 /*all timed the same, except for the title one*/
 
-@keyframes floatin{
-	0% { opacity:0; bottom:-32px; }
-	100% { opacity:1; bottom:0px; }
-}
+
 
 #collection {
   display: flex;
