--- a/ast/style.css
+++ b/ast/style.css
@@ -110,7 +110,21 @@ div.noisebg{
 
 	background-color: #0000;
 
-	height: 200px;
+	height: 100px;
+
+	animation-name: tvselectorfloat;
+	animation-duration: 1.5s;
+}
+.tvselectorwide{
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: center;
+	padding-left : 0px;
+
+	background-color: #0000;
+
+	height: 100px;
 
 	animation-name: tvselectorfloat;
 	animation-duration: 1.5s;
@@ -133,7 +147,9 @@ div a{
 	justify-content: center;
 	align-items: center;
 
-	margin: 5px 20px;
+	margin: 0px 20px;
+	padding-left: 5px;
+	padding-right: 5px;
 
 	background: #0009;
 
@@ -142,9 +158,11 @@ div a{
 	text-align: center;
 	vertical-align: middle;
 
-	width: 200px;
+	width: auto;
+	min-width: 150px;
 	height: 50px;
 }
+
 .floattv:hover{
 	background: #ffff;
 	color: black;
