--- a/ast/style.css
+++ b/ast/style.css
@@ -21,8 +21,8 @@ div{
 	100% { opacity:1; }
 }
 @keyframes fadeinpartial{
-	0% { opacity:0; }
-	100% { opacity:0.9; }
+	0% { opacity:.7; }
+	100% { opacity:1; }
 }
 
 @keyframes slidein{
@@ -117,6 +117,8 @@ div.noisebg{
 	animation-name: tvselectorfloat;
 	animation-duration: 1.5s;
 }
+
+
 .tvselectorwide{
 	display: flex;
 	flex-direction: row;
@@ -152,6 +154,7 @@ div a{
 	margin: 0px 20px;
 	padding-left: 5px;
 	padding-right: 5px;
+	margin-top: 15px;
 
 	background: #0009;
 
@@ -170,18 +173,34 @@ div a{
 	color: black;
 }
 
+@media screen and (max-width:900px){
+	.tvselector > div{
+		flex: 1 1 calc(50% - 16px);
+		max-width: calc(50% - 16px); /* Prevents items from growing beyond half width */
+		box-sizing: border-box; /* Includes padding and border in width calculation */
+	}
+}
+
 @media screen and (max-width: 650px) {
+
+	.tvscreen{
+		flex: auto;
+		justify-content: center;
+	}
+
 	#youtube_video{
 		top: 30%;
 		width: 400px;
 		height: 245px;
 		animation-name: none;
 	}
+	/*
 	.tvselector{
 		flex-direction: column;
 		flex-wrap: nowrap;
 		align-items: center;
 		padding: 0px;
+		padding-top: 25px;
 	}
 	.tvselector div{
 		width: 300px;
@@ -189,6 +208,8 @@ div a{
 		flex-basis: 100%;
 		margin: 5px auto;
 	}
+		*/
+
 	 #tvscreenwelcome {
 		position: relative;
 		margin-top: 15px;
