--- a/6410/shelter/style.css
+++ b/6410/shelter/style.css
@@ -5,7 +5,6 @@ body{
     background-size: 100% 100%;
     min-height: 98vh;
     margin: 0;
-    overflow: hidden;
 }
 
 hr{
@@ -36,18 +35,24 @@ hr{
     flex-direction: column;
     align-items: center;
     justify-content: center; /* Add this line to center contents vertically */
-    height: 100vh; /* Add this line to make the column take the full height of the viewport */
     gap: 0; /* Add this line to remove padding between widecards */
     width: 100%;
     margin: 0 auto;
 }
 
+.bodytext{
+    background-color: #000a;
+    color: #fff;
+    font-size: 1.5rem;
+    font-family: 'Courier New', Courier, monospace;
+    z-index: 1;
+}
 
 .widecard{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #000f;
+    background-color: #000a;
     color: #fff;
 
     width: 46.5rem;
@@ -61,8 +66,18 @@ hr{
     left: auto; /* Remove left */
     transform: none; /* Remove transform */
     padding: 8px;
+
+    font-size: 2rem;
+    font-family: 'Courier New', Courier, monospace;
 }
 
+a{
+    color: #fff;
+}
+
+a:hover{
+    color: #f00;
+}
 
 .shadowText1{
     background: linear-gradient(13deg, #383838ff 1%, #ffff 80%);
