--- a/ast/style.css
+++ b/ast/style.css
@@ -173,11 +173,19 @@ div a{
 	width: auto;
 	min-width: 150px;
 	height: 50px;
+
+	z-index: inherit;
 }
 
 .floattv:hover{
 	background: #ffff;
 	color: black;
+	animation-name: buttonTrans;
+	animation-duration: 300ms;
+}
+@keyframes buttonTrans {
+	0% { background: #0009; color: white; }
+	100% { background: #ffff; color: black; }
 }
 
 @media screen and (max-width:900px){
