--- a/components/liveontwitch.html
+++ b/components/liveontwitch.html
@@ -27,7 +27,7 @@
 </head>
 <body>
     <div id="liveStatus" class="status" style="padding: 5px">
-        <a href="https://twitch.tv/tirsod">🔴 Now streaming. Watch live?</a> 
+        <a target="_parent" rel="noopener noreferrer" href="https://twitch.tv/tirsod">🔴 Now streaming. Watch live?</a> 
     </div>
     <div id="offlineStatus" class="status" style="padding: 5px">
         🔵 Current status: Offline.
