--- a/components/liveontwitch.html
+++ b/components/liveontwitch.html
@@ -56,7 +56,7 @@
         }
 
         // Check if the user is live every 60 seconds
-        setInterval(checkIfLive, 60000);
+        // setInterval(checkIfLive, 60000);
         checkIfLive(); // Initial check
     </script>
 </body>
