--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -60,7 +60,7 @@ a.listItemFinal:hover {
 
 h1{
     margin: 0;
-    padding-bottom: 20px;
+    padding-bottom: 5x;
 }
 
 h2{
@@ -154,6 +154,9 @@ li > ul li {
     margin-left: 10%;
 }
 
+.header{
+    font-size: 1rem;
+}
 .content{
     opacity: 0;
     animation: fadeIn;
@@ -161,6 +164,25 @@ li > ul li {
     animation-delay: 1s;
     animation-fill-mode: forwards;
 }
+.content p{
+    line-height: 1.5em;
+    padding: 0px;
+}
+
+.content li{
+    display: list-item !important;
+    list-style-type: disc !important;
+}
+.content ul li{
+    margin-top: -.4em;
+    margin-bottom: -.4em;
+}
+.content img{
+    border: #444;
+    border-radius: 2px;
+    border-style: solid;
+}
+
 .returner{
     opacity: 0;
     animation: fadeIn;
@@ -176,8 +198,13 @@ li > ul li {
     float: left;
     width: 14%;
     min-width: 200px;
-    height: 100%;
-    min-height: 800px;
+
+    overflow: scroll;
+    scrollbar-color: #00b3ff #0000;
+    scrollbar-width: thin;
+
+    height: 80vh;
+
     background-color: rgba(0, 0, 0, 0.267);
     border-right: thin solid #00b3ff;
 
@@ -191,17 +218,20 @@ li > ul li {
     min-width: 60%;
     max-width: 60%;
 
-    min-height: 800px;
+    height: 80vh;
 
     background-color: rgba(0, 0, 0, 0.267);
     padding-left: 10%;
     white-space: pre-line;
     border-left: thin solid #00b3ff;
-
-    max-height: 600px;
+    
     overflow: scroll;
     scrollbar-color: #00b3ff #0000;
     scrollbar-width: thin;
+}
+
+.content img {
+    width: 80%;
 }
 
 /* TALL SCREEN RULES */
